--- a/BurgerWebsite/HomePage.html
+++ b/BurgerWebsite/HomePage.html
@@ -13,7 +13,7 @@
         <ul>
         <li>
             <ul class="logo">
-                <li><img src="O.jpg" alt="O" width="35px" height="35px" margin="10px"></li>
+                <li><img src="images/O.jpg" alt="O" width="35px" height="35px" margin="10px"></li>
                 <li class="bitra">bitra</li>
             </ul>
         </li>
@@ -49,7 +49,7 @@
             BURGER
         </p>
     </div>
-    <img class="BurgerImage" src="BurgerBurger.png" width="500px" height="500px">
+    <img class="BurgerImage" src="images/BurgerBurger.png" width="500px" height="500px">
     <div class="container">
         <div class="Burgerbackground"></div>
         <span class="BIGBURGER">Burger</span>
@@ -61,20 +61,20 @@ IS WAITING FOR YOU!
         </pre>
         <button class="button">Make Your Own</button>
     </div>
-    <img class="fleche" src="FlecheBeau.png">
+    <img class="fleche" src="images/FlecheBeau.png">
     <div class="premium">
         <p class="Discover">Discover Other Menus</p>
         <ul>
-            <li><img src="hotdog3.png">
+            <li><img src="images/hotdog3.png">
                 <p class="ListText">Hotdog</p>
             </li>
-            <li><img src="shawarma2.png">
+            <li><img src="images/shawarma2.png">
                 <p class="ListText">Shawarma</p>
             </li>
-            <li><img src="burger2.png">
+            <li><img src="images/burger2.png">
                 <p class="ListText">Burger</p>
             </li>
-            <li><img src="pizza2.png">
+            <li><img src="images/pizza2.png">
                 <p class="ListText">Pizza</p>
             </li>
         </ul>
@@ -88,7 +88,7 @@ IS WAITING FOR YOU!
     </div>
     <div class="fin">
     <ul class="logo">
-        <li><img src="O.jpg" alt="O" width="35px" height="35px" margin="10px"></li>
+        <li><img src="images/O.jpg" alt="O" width="35px" height="35px" margin="10px"></li>
         <li class="bitra">bitra</li>
     </ul>
     </div>
