ingredient list for the second page

--- a/BurgerWebsite/BurgerBuilder.html
+++ b/BurgerWebsite/BurgerBuilder.html
@@ -37,40 +37,85 @@
             </ul>
         </ul>
     </div>
+
+
 <div class="container">
+
     <div class=container1>
-        <p>Choose From The List </p>
-        <form>
-            <label>
-              <input type="checkbox" name="choice1"> Meat
-            </label>
-            <br>
-            <label>
-              <input type="checkbox" name="choice2"> Cheese
-            </label>
-            <br>
 
-            <label>
-              <input type="checkbox" name="choice3"> Lettuce
-            </label>
-            <br>
+        <ul class="ButtonList">
 
-            <label>
-              <input type="checkbox" name="choice4"> Tomato
-            </label>
-            <br>
+            <li class="parentButton">
+                <button class="BottomBunButton">Bottom Bun</button>
+                <ul class="subButtonList">
+                    <li><button class="subBottomBunButton">Whole</button></li>
+                    <li><button class="subBottomBunButton">White</button></li>
+                </ul>
+            </li>
 
-            <label>
-              <input type="checkbox" name="choice5"> Onion
-            </label>
-            <br>
+            <li class="parentButton">
+                <button class="PattyButton">Patty</button>
+                <ul class="subButtonList">
+                    <li><button class="subPattyButton">Beef</button></li>
+                    <li><button class="subPattyButton">Chicken</button></li>
+                </ul>
+            </li>
 
-            <button type="submit">Finish</button>
-          </form>
+            <li class="parentButton">
+                <button class="CheeseButton">Cheese</button>
+                <ul class="subButtonList">
+                    <li><button class="subCheeseButton">American</button></li>
+                    <li><button class="subCheeseButton">None</button></li>
+                </ul>
+            </li>
 
+            <li class="parentButton">
+                <button class="LettuceButton">Lettuce</button>
+                <ul class="subButtonList">
+                    <li><button class="subLettuceButton">Green</button></li>
+                    <li><button class="subLettuceButton">None</button></li>
+                </ul>
+            </li>
+            <li class="parentButton">
+                <button class="CucumberButton">Cucumber</button>
+                <ul class="subButtonList">
+                    <li><button class="subCucumberButton">Regular</button></li>
+                    <li><button class="subCucumberButton">Pickeled</button></li>
+                    <li><button class="subCucumberButton">None</button></li>
+                </ul>
+            </li>
+            <li class="parentButton">
+                <button class="TopingsButton">Topings</button>
+                <ul class="subButtonList">
+                    <li><button class="subTopingsButton">Omelette</button></li>
+                    <li><button class="subTopingsButton">Pepperoni</button></li>
+                </ul>
+            </li>
+            <li class="parentButton">
+                <button class="TomatoButton">Tomato</button>
+                <ul class="subButtonList">
+                    <li><button class="subTomatoButton">Regular</button></li>
+                    <li><button class="subTomatoButton">None</button></li>
+                </ul>
+            </li>
+            <li class="parentButton">
+                <button class="OnionButton">Onion</button>
+                <ul class="subButtonList">
+                    <li><button class="subOnionButton">Regular</button></li>
+                    <li><button class="subOnionButton">None</button></li>
+                </ul>
+            </li>
+            <li class="FinishButton">
+                <button class = "FinishButton">Finish</button>
+            </li>
+        </ul>
+        
+        
     </div>
+
+
     <div class="container2">
-        <p> Your Burger </p>
+        <p> </p>
     </div>
 
 </div>
@@ -82,6 +127,6 @@
     </ul>
     </div>
     </div>
-    <script src="script1.js"></script>
+    <script src="BurgerBuilder.js"></script>
 </body>
 </html>
