--- a/BurgerWebsite/BurgerBuilder.html
+++ b/BurgerWebsite/BurgerBuilder.html
@@ -89,6 +89,7 @@
                 <ul class="subButtonList">
                     <li><button class="subTopingsButton">Omelette</button></li>
                     <li><button class="subTopingsButton">Pepperoni</button></li>
+                    <li><button class="subTopingsButton">None</button></li>
                 </ul>
             </li>
             <li class="parentButton">
