--- a/BurgerWebsite/BurgerBuilder.html
+++ b/BurgerWebsite/BurgerBuilder.html
@@ -38,9 +38,9 @@
         </ul>
     </div>
 
-
+<h2 class="maker">Make your <span class="BurgerText">Burger</span> here !</h2>
+<p class="Appetit hidden"><span class="A">B</span>on <span class="A">A</span><span class="ppetit">ppetit</span> !</p>
 <div class="container">
-
     <div class=container1>
         <ul class="ButtonList">
 
@@ -132,6 +132,11 @@
     </div>
     </div>
     <div class="content">
+      <div class="plate hidden">
+        <div class="OvalPlate1"></div>
+        <div class="OvalPlate2"></div>
+        <div class="OvalPlate3"></div>
+      </div>
         <div class="burger">
             <div class="bottomBun hidden">
                 <div class="TopOvalLB"></div>
