Some Final Changes

--- a/BurgerWebsite/HomePage.html
+++ b/BurgerWebsite/HomePage.html
@@ -59,7 +59,9 @@
 YOUR CUSTOM BURGER 
 IS WAITING FOR YOU!
         </pre>
-        <button class="button">Make Your Own</button>
+        <a href="BurgerBuilder.html" class="button" style="text-decoration: none;">Make Your Own</a>
+
+
     </div>
     <img class="fleche" src="images/FlecheBeau.png">
     <div class="premium">
