--- a/BurgerWebsite/BurgerBuilder.html
+++ b/BurgerWebsite/BurgerBuilder.html
@@ -21,11 +21,11 @@
         <li>
             <ul class="menu">
                 <li><hr class="separator"></li>
-                <li><a href="www.home.com"><strong>Home</strong></a></li>
-                <li><a href="www.news.com"><strong>Recipes</strong></a></li>
-                <li><a href="www.home.com"><strong>Our Burgers</strong></a></li>
-                <li><a href="www.home.com"><strong>Contact us</strong></a></li>
-                <li><a href="www.home.com"><strong>FAQ</strong></a></li>
+                <li><a href="HomePage.html"><strong>Home</strong></a></li>
+                <li><a href="HomePage.html"><strong>Recipes</strong></a></li>
+                <li><a href="HomePage.html"><strong>Our Burgers</strong></a></li>
+                <li><a href="HomePage.html"><strong>Contact us</strong></a></li>
+                <li><a href="HomePage.html"><strong>FAQ</strong></a></li>
             </ul>
         </li>
             <ul class="Sign">
