--- a/BurgerWebsite/BurgerBuilder.html
+++ b/BurgerWebsite/BurgerBuilder.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/O.jpg" type="image/x-icon">
+    <link rel="icon" href="imagesAndFonts/O.jpg" type="image/x-icon">
 
-    <link rel="stylesheet" href="styleBurgerBuilder.css">
+    <link rel="stylesheet" href="CSS_files/styleBurgerBuilder.css">
     <title>Obitra</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <ul>
         <li>
             <ul class="logo">
-                <li><img src="images/O.jpg" alt="O" width="35px" height="35px" margin="10px"></li>
+                <li><img src="imagesAndFonts/O.jpg" alt="O" width="35px" height="35px" margin="10px"></li>
                 <li class="bitra">bitra</li>
             </ul>
         </li>
@@ -126,7 +126,7 @@
    
     <div class="fin">
     <ul class="logo">
-        <li><img src="images/O.jpg" alt="O" width="35px" height="35px" margin="10px"></li>
+        <li><img src="imagesAndFonts/O.jpg" alt="O" width="35px" height="35px" margin="10px"></li>
         <li class="bitra">bitra</li>
     </ul>
     </div>
@@ -415,6 +415,6 @@
     
         </div>
     </div>
-    <script src="BurgerBuilder.js"></script>
+    <script src="JS_files/BurgerBuilder.js"></script>
 </body>
 </html>
