--- a/BurgerWebsite/HomePage.html
+++ b/BurgerWebsite/HomePage.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="O.jpg" type="image/x-icon">
+    <link rel="icon" href="imagesAndFonts/O.jpg" type="image/x-icon">
 
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="CSS_files/style3.css">
     <title>Obitra</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <ul>
         <li>
             <ul class="logo">
-                <li><img src="images/O.jpg" alt="O" width="35px" height="35px" margin="10px"></li>
+                <li><img src="imagesAndFonts/O.jpg" alt="O" width="35px" height="35px" margin="10px"></li>
                 <li class="bitra">bitra</li>
             </ul>
         </li>
@@ -49,7 +49,7 @@
             BURGER
         </p>
     </div>
-    <img class="BurgerImage" src="images/BurgerBurger.png" width="500px" height="500px">
+    <img class="BurgerImage" src="imagesAndFonts/BurgerBurger.png" width="500px" height="500px">
     <div class="container">
         <div class="Burgerbackground"></div>
         <span class="BIGBURGER">Burger</span>
@@ -63,20 +63,20 @@ IS WAITING FOR YOU!
 
 
     </div>
-    <img class="fleche" src="images/FlecheBeau.png">
+    <img class="fleche" src="imagesAndFonts/FlecheBeau.png">
     <div class="premium">
         <p class="Discover">Discover Other Menus</p>
         <ul>
-            <li><img src="images/hotdog3.png">
+            <li><img src="imagesAndFonts/hotdog3.png">
                 <p class="ListText">Hotdog</p>
             </li>
-            <li><img src="images/shawarma2.png">
+            <li><img src="imagesAndFonts/shawarma2.png">
                 <p class="ListText">Shawarma</p>
             </li>
-            <li><img src="images/burger2.png">
+            <li><img src="imagesAndFonts/burger2.png">
                 <p class="ListText">Burger</p>
             </li>
-            <li><img src="images/pizza2.png">
+            <li><img src="imagesAndFonts/pizza2.png">
                 <p class="ListText">Pizza</p>
             </li>
         </ul>
@@ -87,14 +87,14 @@ IS WAITING FOR YOU!
             <input type="email" id="emailInput" placeholder="Enter your email address" required>
             <button type="submit" id="subscribeButton">Subscribe</button>
         </form>
+        <div class="fin" style="position: absolute; left: -10%; top: 340px">
+            <ul class="logo">
+                <li><img src="imagesAndFonts/O.jpg" alt="O" width="35px" height="35px" margin="10px"></li>
+                <li class="bitra" style="color: #332B46;">bitra</li>
+            </ul>
+            </div>
     </div>
-    <div class="fin">
-    <ul class="logo">
-        <li><img src="images/O.jpg" alt="O" width="35px" height="35px" margin="10px"></li>
-        <li class="bitra">bitra</li>
-    </ul>
     </div>
-    </div>
-    <script src="script1.js"></script>
+    <script src="JS_files/script1.js"></script>
 </body>
 </html>
